# laarid_package_android-bionic

./: .gitignore  .travis.yml  Makefile.am  README.md  android-bionic-0.0.pc.in  bionic-0.0.pc.in  configure.ac
debian/: README  README.source  bintray.json.in  changelog  control  copyright  libandroid-bionic0-dev.dirs  libandroid-bionic0-dev.install  libandroid-bionic0.lintian-overrides  libbionic0-dev.install  libbionic0.lintian-overrides  rules  watch
include/bionic/: bionic.h  cdefs.h  gettid.h  properties.h  properties_impl.h  stdio.h  stdlib.h  string.h  uio.h  unistd.h
src/: atomic_inline.h  futex.h  gettid.c  properties.cpp  properties_compat.c  stdio.c  stdlib.c  string.c  strlcat.c  uio.c  unistd.c
